--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
     "@whiskeysockets/baileys": "^6.7.18",
+    "dotenv": "^17.1.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "pino": "^9.7.0",
