feat: Implement WhatsApp messaging functionality with Supabase integration
- Added messages controller to handle fetching and storing WhatsApp messages.
- Created NotAuthorizedError class for better error handling.
- Set up JWT middleware for user authentication.
- Developed routes for messages and WhatsApp service management.
- Integrated WhatsApp service manager to manage user connections and message handling.
- Implemented user session management for tracking active sessions.
- Added error handling middleware for consistent error responses.
- Created utility functions for JWT token creation and verification.
- Established Supabase client for database interactions.
- Enhanced logging and state management for WhatsApp connections.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # Baileys auth/session
-auth_info_baileys/
+auth_info_baileys*/
+whatsapp-state/
 
 # VSCode
 .vscode/
