--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,16 +14,20 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.50.3",
+    "@types/cors": "^2.8.19",
     "@whiskeysockets/baileys": "^6.7.18",
+    "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
     "qrcode-terminal": "^0.12.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.0.10",
     "@types/qrcode-terminal": "^0.12.2",
     "pino-pretty": "^13.0.0",
