Fix authentication: Support both Supabase and custom JWT tokens
- Updated JWT middleware to accept both Supabase and custom JWT tokens
- Fixed CORS configuration to handle authentication properly
- Added SUPABASE_JWT_SECRET environment variable
- Updated render.yaml with new environment variables

--- a/render.yaml
+++ b/render.yaml
@@ -13,5 +13,7 @@ services:
         sync: false
       - key: SUPABASE_ANON_KEY
         sync: false
+      - key: SUPABASE_JWT_SECRET
+        sync: false
       - key: JWT_SECRET
         generateValue: true # Render will generate a secure secret 
