--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SUPABASE_URL=your-supabase-url-here
 SUPABASE_ANON_KEY=your-supabase-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key-here
+GROQ_API_KEY=your-groq-api-key-here
