--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.1.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "groq-sdk": "^0.27.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0",
