feat: Implement Supabase-based WhatsApp authentication state management
- Refactored WhatsAppService to use Supabase for storing authentication credentials and signal keys.
- Added new utility function `useSupabaseAuthState` for managing auth state with Supabase.
- Created new tables in Supabase for storing WhatsApp auth credentials and keys.
- Introduced a logger utility for consistent logging throughout the service.
- Improved connection management and error handling in WhatsAppService.
- Enhanced message processing and filtering logic with detailed logging.
- Updated target group management and user preferences loading.
- Implemented cleanup and logout handling to remove auth data from Supabase.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@cacheable/node-cache": "^1.5.8",
+    "@hapi/boom": "^10.0.1",
     "@supabase/supabase-js": "^2.50.3",
     "@types/cors": "^2.8.19",
     "@whiskeysockets/baileys": "^6.7.18",
